Fixed spacing issues for mobile

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -22,6 +22,7 @@ a{
     text-align: center;
     justify-content: space-between;
     padding-right: 5%;
+    width: 100%;
 }
 
 .button{
@@ -60,7 +61,7 @@ h1{
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 100%;
+    width: 80%;
 }
 
 
@@ -152,7 +153,7 @@ input[type="text"]{
     font-size: 1.5rem;
 }
 
-@media only screen and (max-width:600px) {
+@media screen and (max-width:600px) {
     .grid_body{
         grid-template-columns: 1fr;
         grid-template-rows: 20% 1fr;
@@ -166,8 +167,30 @@ input[type="text"]{
     }
     .navbar{
         font-size: 1rem;
+        width: 100%;
     }
     h1{
-        font-size: 1.5rem;
+        font-size: 2rem;
+    }
+    .create_contact{
+        width: 50vw;
+        align-items: center;
+    }
+    .button_line{
+        padding:0;
+        margin: 0;
+        width: 55%;
+    }
+}
+
+@media screen and (max-width:400px){
+    .existing_contact{
+        margin-left: -10%;
+    }
+    .contact_img{
+        width: 100px;
+    }
+    .button_line{
+        width: 80%;
     }
 }
